--- a/PO_ProjektCPP/PO_ProjektCPP.vcxproj.filters
+++ b/PO_ProjektCPP/PO_ProjektCPP.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClInclude Include="..\..\..\..\..\Downloads\jsoncpp-src-0.5.0.tar\dist\jsoncpp-src-0.5.0\include\json\writer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Menu.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -129,6 +132,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="conio2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Menu.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
