--- a/PO_ProjektCPP/PO_ProjektCPP.vcxproj
+++ b/PO_ProjektCPP/PO_ProjektCPP.vcxproj
@@ -154,6 +154,7 @@
     <ClInclude Include="Inkludy.h" />
     <ClInclude Include="Jagody.h" />
     <ClInclude Include="Lis.h" />
+    <ClInclude Include="Menu.h" />
     <ClInclude Include="Mlecz.h" />
     <ClInclude Include="Organizm.h" />
     <ClInclude Include="Owca.h" />
@@ -173,6 +174,7 @@
     <ClCompile Include="Guarana.cpp" />
     <ClCompile Include="Jagody.cpp" />
     <ClCompile Include="Lis.cpp" />
+    <ClCompile Include="Menu.cpp" />
     <ClCompile Include="Mlecz.cpp" />
     <ClCompile Include="Organizm.cpp" />
     <ClCompile Include="Owca.cpp" />
