--- a/PO_ProjektCPP/PO_ProjektCPP.vcxproj
+++ b/PO_ProjektCPP/PO_ProjektCPP.vcxproj
@@ -159,6 +159,7 @@
     <ClInclude Include="Organizm.h" />
     <ClInclude Include="Owca.h" />
     <ClInclude Include="Roslina.h" />
+    <ClInclude Include="RozmiarException.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Swiat.h" />
     <ClInclude Include="targetver.h" />
@@ -180,6 +181,7 @@
     <ClCompile Include="Owca.cpp" />
     <ClCompile Include="PO_ProjektCPP.cpp" />
     <ClCompile Include="Roslina.cpp" />
+    <ClCompile Include="RozmiarException.cpp" />
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="Swiat.cpp" />
     <ClCompile Include="Trawa.cpp" />
