--- a/PO_ProjektCPP/PO_ProjektCPP.vcxproj.filters
+++ b/PO_ProjektCPP/PO_ProjektCPP.vcxproj.filters
@@ -81,6 +81,9 @@
     <ClInclude Include="Menu.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="RozmiarException.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -135,6 +138,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Menu.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="RozmiarException.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
